--- a/pug/parts/header.pug
+++ b/pug/parts/header.pug
@@ -1,8 +1,11 @@
-div.header
-    nav.navbar.navbar-default
-        div.container
+- var menuItems = ["home", "about", "hairstyles", "news", "contact"]
 
-            div.navbar-header
+
+.header
+    nav.navbar.navbar-default
+        .container
+
+            .navbar-header
                 a.navbar-brand(href="#")
                     img(src="../img/logo.png" alt="Logo")
                 button.navbar-toggle(type="button" data-toggle="collapse" data-target="#nav-content")
@@ -11,15 +14,8 @@ div.header
                     span.icon-bar
                     span.icon-bar
 
-            div.collapse.navbar-collapse#nav-content
+            .collapse.navbar-collapse#nav-content
                 ul.nav.navbar-nav.navbar-right
-                    li
-                        a(href="#") HOME
-                    li
-                        a(href="#") ABOUT
-                    li
-                        a(href="#") HAIRSTYLES
-                    li
-                        a(href="#") NEWS
-                    li
-                        a(href="#") CONTACT
+                    each it in menuItems
+                        li
+                            a(href="#")= it
