--- a/sass/_info-block.sass
+++ b/sass/_info-block.sass
@@ -1,56 +1,4 @@
 .info-block
-  color: #fff
-  background-color: $info-color
   border: 5px solid $main-border
   border-radius: 5px
-  padding: 35px 15px 10px 15px
-  display: block
-  position: relative
-  margin-bottom: 35px
-
-  .info-block-head
-    background-image: url("../img/bg-featured.png")
-    background-repeat: repeat-x
-    font-family: Comfortaa, Arial, Helvetica, sans-serif
-    font-size: 20px
-    border-radius: 5px
-    color: #fff
-    padding: 10px 20px
-    position: absolute
-    top: -20px
-    left: 15px
-
-
-  &.inverted
-    color: #464646
-    background-color: #fff
-
-  &.on-right
-    text-align: right
-    min-height: 225px
-    padding-right: 5%
-    z-index: -10
-
-    img
-      position: absolute
-      top: -30px
-      left: 0
-      padding: 0
-      z-index: -5
-
-  h1
-    font-size: 26px
-    line-height: 36px
-
-  img
-    float: left
-    margin: 15px 15px
-    border-radius: 5px
-
-  .author
-    text-align: right
-
-  p.bold
-    font-weight: bold
-    font-size: 14px
-    padding-right: 5px
+  font-family: Arial, sans-serif
