--- a/sass/style.sass
+++ b/sass/style.sass
@@ -3,6 +3,7 @@
 @import "article"
 @import "info-block"
 @import "footer"
+@import "slider"
 
 body
   font-family: Arial, Helvetica, sans-serif
@@ -18,7 +19,7 @@ body
 
 @media screen and (min-width: 500px)
   .container
-    width: auto
+    width: 960px
 
   .header
     height: 180px
