--- a/pug/index.pug
+++ b/pug/index.pug
@@ -1,6 +1,6 @@
 extends parts/layout
 
-block body
+block main-content
     .container
         .row.hidden-xs
             include parts/index/slider
