--- a/pug/parts/index/info-blocks.pug
+++ b/pug/parts/index/info-blocks.pug
@@ -20,7 +20,7 @@
 
 .col-xs-12.col-sm-6
     .info-block.on-right
-        img(src="../img/skinhead.jpg" alt="skinhead")
+        img(src="../img/skinhead.png" alt="skinhead")
         p.bold Are you losing your hair?
         p.bold Let us help you in bringing
         p.bold back your confidence.
