--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -1,14 +1,17 @@
-$header-height: 50px
-$footer-height: 80px
+$base-font-size: 13px
+$base-line-height: 1.5
 
-$body-color: #ededed
-$info-color: #519194
-$main-color: #335F64
-$second-color: #4c8f96
-$opus-color: #1B2130
+$pri-color:   #4c8f96
+$sec1-color:  #519194
+$sec2-color:  #5fb3bd
+
+$compl-color: #1B2130
+$background-color: #ededed
 
 $main-border: #5fb3bd
 
 $social-bgr: #387a82
 
-$main-font-size: 13px
+
+$header-height: 50px
+$footer-height: 80px
